# paraview-network-editor

./: .gitignore  CMakeLists.txt  README.md  find_graphviz.cmake  layout.pwin  paraview.sh.in
.github/workflows/: install_graphviz.sh  main.yml
Plugin/: CMakeLists.txt  ConnectionDragHelper.cpp  ConnectionDragHelper.h  ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  EditorGraphicsItem.cpp  EditorGraphicsItem.h  LabelGraphicsItem.cpp  LabelGraphicsItem.h  NetworkEditor.cpp  NetworkEditor.cxx  NetworkEditor.h  NetworkEditorView.cpp  NetworkEditorView.h  NetworkEditorWidget.cpp  NetworkEditorWidget.h  OutputPortStatusGraphicsItem.cpp  OutputPortStatusGraphicsItem.h  PortGraphicsItem.cpp  PortGraphicsItem.h  Settings.xml  SourceGraphicsItem.cpp  SourceGraphicsItem.h  StickyNoteGraphicsItem.cpp  StickyNoteGraphicsItem.h  debug_message.h  graph_layout.cpp  graph_layout.h  observer.cpp  observer.h  paraview.plugin  resources.qrc  stdextensions.h  utilpq.cpp  utilpq.h  utilqt.cpp  utilqt.h  vtkPasteProxyLocator.cpp  vtkPasteProxyLocator.h  vtkPasteStateLoader.cpp  (+1 more)
Plugin/resources/: dark.qss
Settings/: CMakeLists.txt  vtk.module  vtkPVNetworkEditorSettings.cpp  vtkPVNetworkEditorSettings.h
StylesheetPlugin/: CMakeLists.txt  LoadStylesheet.cxx  LoadStylesheet.h  paraview.plugin
StylesheetPlugin/resources/: dark.qss
